  quote-detecting regular expressions.  This can be used to
  correctly handle lines beginning with smileys such as ":-)" -
  these lines were detected as quoted text by the old code.

- The syntax for function keys in key bindings and macro definitions
  has changed:  Instead of "fN", you have to use "<fN>" now.  This
  is more consistant with the syntax for the other special keys like
  "<up>", "<down>", and so on.

- We have a new feature named edit-message.  This enables you to
  edit a message from one of your mail folders and re-send or
  re-file it afterwards.

- Thread collapsing is there: To control it, we have the two
  functions collapse-all and collapse-thread, and the configuration
  variables $collapse_unread and $collapse_jump.

- We have a new set of functions decrypt-{save,copy}. They strip off
  the initial layer of PGP/MIME encryption.  For "classical"
  application/pgp messages, they are equivalent to the decode
  functions, for unencrypted messages they fall back to the normal
  save functions.

- The build-time "hidden host" option has gone.  Use the
  $hidden_host configuration variable instead.

- Unknown major MIME types are recognized properly.

- An option $write_bcc controls whether or not the Bcc header is
  written out to the mail transport agent or not.  Exim users may
  wish to use this.

- The compose menu tries to detect and smoothly handle changes to
  attached files.

- On the compose menu, you can generate a "private" copy of an
  attached file using the get-attachment function.

- sendmail's exit values are properly interpreted, so you will no
  longer get a "no such file or directory" error when sending mail
  to a non-existing local user.

- The variable $attach_format controls the look of the compose and
  attach menus.

- The file browser permits you to view files before selecting them.

- Bug fixes of all kinds.  Look at the ChangeLog file for details.


$Id$