@@ -73,6 +73,18 @@ behavior:
 --enable-pop
 	enable POP3 support
 
+--enable-imap
+	enable IMAP support
+
+--disable-nls
+	This switch disables mutt's native language support.
+
+--with-included-gettext Mutt will be built using the GNU gettext
+	library included in the intl/ sub-directory.  You may need
+	to use this switch if your machine has something which looks
+	like gettext to the configure script, but isn't able to cope
+	with mutt's catalog files.
+
 --with-rx
 	use GNU rx instead of local regexp routines.  Many systems don't
 	have the POSIX compliant regcomp/regexec/regfree routines, so this
@@ -133,6 +145,7 @@ A_NORMAL or KEY_MIN, then you probably don't have a SysV compliant curses
 library.  You should install either ncurses or S-Lang (see above), and then
 run the ``configure'' script again.
 
+Please note that "VPATH" builds currently do _not_ work.
 
 Platform Notes
 ==============
@@ -140,9 +153,9 @@ Platform Notes
 All platforms
 
 	There is a bug in most (if not all) S-Lang versions which
-	prevents the Meta key from working with mutt.  A patch can be
-	found in the file patch.slang-1.2.2.keypad.1 in this mutt
-	distribution.
+	prevents the Meta key from working with mutt.  A patch can
+	be found in the file contrib/patch.slang-1.2.2.keypad.1 in
+	this mutt distribution.
 
 
 Solaris 2.4
@@ -161,11 +174,6 @@ Linux
 	On recent Linux systems, flock() and fcntl() locks don't mix.  If
 	you use the --enable-flock switch on such systems, be sure to
 	give the --disable-fcntl argument as well.
-
-	The Linux libc 5.4.45 disables locale support in programs running
-	setgid mail.  You'll need to use the configure switch
-	"--enable-locales-fix".  If you're using a non-iso-8859 font, you
-	lose.  This is not an issue on glibc (libc 6) based systems.
 
 Sparc Linux
 
@@ -187,10 +195,11 @@ Digital Unix (OSF/1)
 FreeBSD 3.0
 
 	/bin/sh is broken on this platform.  You need the
-	"--with-exec-shell" configuration switch here; ksh
-	and bash are reported to be fine.
+	"--with-exec-shell" configuration switch here; ksh and bash
+	are reported to be fine.
 
 	This may also be an issue with earlier FreeBSD
 	versions.
+
 
 $Id$
