@@ -3,7 +3,7 @@ dnl $Id$
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(mutt.h)
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(mutt, 0.94.11)
+AM_INIT_AUTOMAKE(mutt, 0.94.12)
 
 ALL_LINGUAS="de ru it"
 
